--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.3.4",
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-native": "0.71.4",
+    "react-native-axios": "^0.17.1",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-maps": "^1.4.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -27,6 +38,8 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.8",
     "prettier": "^2.4.1",
+    "react-native-config": "^1.5.0",
+    "react-native-dotenv": "^3.4.8",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
