--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-maps": "^1.4.0",
     "react-native-modal": "^13.0.1",
+    "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-star-rating": "^1.1.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
