--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^17.3.2",
+    "@react-native-firebase/auth": "^17.3.2",
+    "@react-native-firebase/database": "^17.3.2",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.3.4",
+    "formik": "^2.2.9",
     "lottie-react-native": "^5.1.5",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-axios": "^0.17.1",
+    "react-native-flash-message": "^0.4.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-maps": "^1.4.0",
     "react-native-modal": "^13.0.1",
