--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-axios": "^0.17.1",
     "react-native-flash-message": "^0.4.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.4.0",
     "react-native-modal": "^13.0.1",
     "react-native-ratings": "^8.1.0",
